MDEV-11288 Server crashes in Binlog_crypt_data::init trying to feed encrypted log without decryption capabilities